# Diablo2Pets

./: .gitattributes  .gitignore  README.md  diff.txt  fix.js  fix2.js  fix3.js  index.html  package-lock.json  package.json  run.ps1  test.js  test.ps1  test2.ps1  test_copy.js  test_write.js  test_write2.js  test_write3.js  tsconfig.json  tsconfig.node.json  vite.config.ts
automation/python_runtime/: README.md
dist-electron/electron/: main.js  preload.js
docs/: 3c-counter-v13-alignment.md  README.md  architecture.md  baseline-matrix.md  current-issues-plan.md  current-state-and-gaps.md  implementation-phases-v1.md  migration-from-diablo2tools.md  phase-1-counter-debug.md  positioning-layout.md  product-reset-spec.md  roadmap.md  smoke-checklist.md  technical-implementation-plan.md  ui-system.md  ui-ux-optimization-and-future-iterations.md
electron/: main.ts  preload.ts
release/Diablo2Pets-win32-x64/: chrome_100_percent.pak  chrome_200_percent.pak  resources.pak
resources/fast-launcher/: Cargo.toml
resources/fast-launcher/src/: main.rs
scripts/: generate-icon.mjs  package-win.mjs  prepare-python-runtime.ps1
src/: App.tsx  main.tsx  test_write_new.ts  types.ts  vite-env.d.ts
src/components/: AutomationPanel.tsx  CounterPanel.tsx  CubingWorkbench.tsx  DropPanel.tsx  FastLauncherCard.tsx  FishingDiabloPet.tsx  FloatingPet.tsx  PanelErrorBoundary.tsx  PanelStateCard.tsx  PetCodexOverlay.tsx  PetShell.tsx  SetupGuide.tsx
src/lib/: automationLog.ts  cubingWorkbench.ts  date.ts  dropExports.ts  dropReport.ts  petCeremony.ts  petCodex.ts  petFishing.ts  (+6 more)
(+83 files in other folders)
