[package]
name = "fast-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_UI_Input_KeyboardAndMouse"
] }
winreg = "0.52"
sysinfo = "0.30"
ntapi = "0.4"
winapi = { version = "0.3", features = ["winnt", "ntstatus"] }